--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 2005/10/10  David Saez <david@ols.es>
 		- fixed some short tags in example.php,
 		  fixed queries to .net whois server,
-		  added support for .pe domains
+		  added support for .pe domains,
+		  fixed .se registration detection
 		  thanx to Speedywise
 
 2005/10/09  Released phpWhois 4.0.1
