fix to let it work with PHP 4.1.0 - 4.3.1

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,8 @@
 		  fixed queries to .net whois server,
 		  added support for .pe domains,
 		  fixed .se registration detection,
-		  added requirements section in README
+		  added requirements section in README,
+		  fix to let it work with PHP 4.1.0 - 4.3.1
 		  thanx to Speedywise
 
 2005/10/09  Released phpWhois 4.0.1
