--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.10 2005/10/10 14:55:54 sparc Exp $
+$Id: README,v 1.11 2005/10/10 15:03:04 sparc Exp $
 
 Introduction
 ------------
@@ -29,7 +29,8 @@ phpWhois requires PHP 4.3.0 or better with OpenSSL support to
 work properly. Without SSL support you will not be able to
 query domains which do not have a whois server but that have
 a https based whois. Also, you can run it in lower PHP versions
-but without timeout control (see example.whois)
+but without timeout control. phpWhois will not work with PHP
+versions below 4.1.0
 
 Installation
 ------------
