some fixes in .uk handler

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2005/11/11  David Saez <david@ols.es>
 		- removed support for .es domains
+		- some fixes in .uk handler
 
 2005/11/07  David Saez <david@ols.es>
 		- added handler for .int domains
