added function to set specific whois servers

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+2006/01/20  David Saez <david@ols.es>
+		- changed .es http based whois server
+		- added function to set specific whois servers
+
 2006/01/18  David Saez <david@ols.es>
 		- minor fixes in enom handler
 
