fixed lookup error on .co.za domains

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2006/01/31  David Saez <david@ols.es>
+		- fixed lookup error on .co.za domains
+
 2006/01/27  David Saez <david@ols.es>
 		- added deep_whois feature to get faster but
 		  less acurate results
