--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.16 2006/02/01 18:45:08 sparc Exp $
+$Id: README,v 1.17 2006/02/03 16:30:33 sparc Exp $
 
 Introduction
 ------------
@@ -138,8 +138,8 @@ care about getting the real owner information you can set:
 
 $whois->deep_whois = false;
 
-this will tell phpWhois to just query one whois server. For .com and
-.net domains and ip addresses this will prevent phpWhois to ask more
+this will tell phpWhois to just query one whois server. For .com, .net
+and .tv domains and ip addresses this will prevent phpWhois to ask more
 than one whois server, you will just know if the donmain is registered
 or not and which is the registrar but not the owner information.
 
