fixed nserver detection

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2006/02/13  David Saez <david@ols.es>
+		- fixed nserver detection in whois.es.php
+
 2006/02/03  Released phpWhois 4.1.0
 
 2006/02/03  David Saez <david@ols.es>
