--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2006/02/27  David Saez <david@ols.es>
 		- minor fixes for non-existing .es domains
 		- fixed ip2long PHP5 compatibility
+		- fixed sponsor detection on opensrsnet handler
 
 2006/02/13  David Saez <david@ols.es>
 		- fixed nserver detection in whois.es.php
