added gtld handler for namejuice

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2006/03/19 Robert Apgood <rob@carpelaw.com>
+		- added gtld handler for namejuice
+
 2006/03/14 David Saez <david@ols.es>
 		- fixed case detection on whois.parser.php
 
