fixed register.com handler

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 2006/03/24  David Saez <david@ols.es>
 		- added handler for NAMESDIRECT
-
-2006/03/21  David Saez <david@ols.es>
+		- fixed register.com handler
+		
+2006/03/21 David Saez <david@ols.es>
 		- Fixed problems with some domains registered
 		  at enom
 
