Improved HTML output

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2006/04/08  David Saez <david@ols.es>
 		- Added handler for .eu
 		- Minor fix to example.php
+		- Improved HTML output
 
 2006/04/05  David Saez <david@ols.es>
 		- Added support for EPP status (bug #1463866)
