fixed special non-handled domains support

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2006/04/28  David Saez <david@ols.es>
+		- fixed special non handled domains support
+
 2006/04/08  David Saez <david@ols.es>
 		- Added handler for .eu
 		- Minor fix to example.php
