added not supported domain .cy

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2006/04/28  David Saez <david@ols.es>
 		- fixed special non handled domains support
+		- added not supported domain .cy
 
 2006/04/08  David Saez <david@ols.es>
 		- Added handler for .eu
