fixed directi handler detection

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- fixed special non handled domains support
 		- added not supported domain .cy
 		- fixed typo in test.txt
+		- fixed directi handler detection
 
 2006/04/08  David Saez <david@ols.es>
 		- Added handler for .eu
