--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.17 2006/02/03 16:30:33 sparc Exp $
+$Id: README,v 1.18 2006/05/31 15:02:10 sparc Exp $
 
 Introduction
 ------------
@@ -38,8 +38,9 @@ Installation
 Basically, untar the distribution somewhere outside your server's
 document root and make sure the directory is listed in 'include_path'
 in your php.ini file, server configuration or in an .htaccess file.
-If you want to test it using a web browser just copy example.php and
-whois.icon.png anywhere on your server's document root and try it.
+If you want to test it using a web browser just copy example.php ,
+example.html and whois.icon.png anywhere on your server's document
+root and try it.
 
 phpWhois is not a PHP aplication is a class that can be used in
 applications. There is no need to make the installation folder
