rawdata reflects all rwhois output

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 200&/06/12  David Saez <david@ols.es>
 		- More PHP5 friendly (from Bug #1502777)
+		- rawdata reflects all rwhois output
 
 2006/05/31	David Saez <david@ols.es>
 		- Fixed bug #1495389
