added suport and handler for .mobi

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
-200&/06/12  David Saez <david@ols.es>
+2006/06/12  David Saez <david@ols.es>
 		- More PHP5 friendly (from Bug #1502777)
 		- rawdata reflects all rwhois output
+		- added suport and handler for .mobi
 
 2006/05/31	David Saez <david@ols.es>
 		- Fixed bug #1495389
