--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2006/06/23  David Saez <david@ols.es>
 		- fixed warning in whois.ip.afrinic
+		- added handler for .nz
 
 2006/06/19  David Saez <david@ols.es>
 		- better handling of errors in whois.ip.php
