--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 2006/06/23  David Saez <david@ols.es>
 		- fixed warning in whois.ip.afrinic
 		- added handler for .nz
+		- disabled .es handler
+		- Released version 4.1.1
 
 2006/06/19  David Saez <david@ols.es>
 		- better handling of errors in whois.ip.php
