--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2006/12/18
 		-  minor fixes to whois.ca.php, whois.es.php,
-		   whois.gtld.iana.php and whois.gtld.opensrsnet.php
+		   whois.gtld.iana.php, whois.gtld.opensrsnet.php
+		   and whois.ip.apnic.php
 
 2006/09/29  David Saez <david@ols.es>
 		- Fixed .in whois server name
