--- a/CHANGES
+++ b/CHANGES
@@ -1,15 +1,20 @@
+2006/12/20
+		- Released version 4.1.2
+
 2006/12/19
-		- minor fixes to testsuite.php
+		- minor fixes to testsuite.php, whois.parser.php,
+		  whois.gtld.joker.php, whois.gtld.enom.php and
+		  whois.gtld.tvcorp.php
 		- updated .nl handler
 		- enom has mixed with bulregister, so bulkr
 		  gtl handler has been removed
 
 2006/12/18
 		- minor fixes to whois.ca.php, whois.es.php,
-		  whois.gtld.iana.php, whois.gtld.opensrsnet.php
+		  whois.gtld.iana.php, whois.gtld.opensrsnet.php,
 		  whois.ip.apnic.php, whois.biz.php,
-		  whois.gtld.psiusa.php, whois.parser.php
-		  whois.ch.php
+		  whois.gtld.psiusa.php, whois.parser.php,
+		  and whois.ch.php
 		- updated .lthandler
 		- added support and handler for .jobs
 
