fixed .se handler

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2007/04/17
 		- allow easy plugin for new gtld handlers
 		- minor improvement to testsuite.php
+		- fixed .se handler
 
 2007/04/16
 		- added basic support for .bz
