--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.18 2006/05/31 15:02:10 sparc Exp $
+$Id: README,v 1.19 2007/04/18 11:46:22 sparc Exp $
 
 Introduction
 ------------
@@ -15,6 +15,9 @@ In addition, if the domain belongs to a registrar for which a special
 handler exists, the special handler will parse the output and make
 additional elements available in the response. The keys of these
 additional elements are described in the file HANDLERS.
+
+It fully supports IDNA (internationalized) domains names as
+defined in RFC3490, RFC3491, RFC3492 and RFC3454.
 
 It also supports ip/AS whois queries which are very useful to trace
 SPAM. You just only need to pass the doted quad ip address or the
