--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 200/04/24
 		- added gtld handler for Wild West Domains
+		- utf8 fixes in example.php
 
 2007/04/23
 		- added gtld handler for RRPPROXY
