added support for centralnic domains

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- fixed uninitialized variable in example.php
 		- fixes in publicdomainregistry and uk handlers
 		- improved regex for html output
+		- added support for centralnic domains
 
 2007/05/30
 		- removed support for .gr domains
