--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 		- fixes in publicdomainregistry and uk handlers
 		- improved regex for html output
 		- added support for centralnic domains
+		- added handler for .pt
 
 2007/05/30
 		- removed support for .gr domains
