--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 		- improved regex for html output
 		- added support for centralnic domains
 		- added handler for .pt
+		- fixed bug #1761156
 
 2007/05/30
 		- removed support for .gr domains
